# full_coverage_algorithm

./: README.md
Multi-Robot-Coverage-Planning/logs/full_coverage_path_planner/: build.make.000.log.stderr
src/autolabor_robot/: CMakeLists.txt
src/autolabor_robot/driver/depth_camera/mo_stereo_camera_driver_ros_v1.4.3/: CMakeLists.txt  package.xml
src/autolabor_robot/driver/depth_camera/mo_stereo_camera_driver_ros_v1.4.3/config/: calib.yaml
src/autolabor_robot/driver/depth_camera/mo_stereo_camera_driver_ros_v1.4.3/doc/: rosSDK使用说明.txt
src/autolabor_robot/driver/depth_camera/mo_stereo_camera_driver_ros_v1.4.3/launch/: moasic.launch
src/autolabor_robot/driver/depth_camera/mo_stereo_camera_driver_ros_v1.4.3/lib/mo_stereo_camera_driver/include/mo_stereo_camera/: mo_stereo_camera_driver_c.h
src/autolabor_robot/driver/depth_camera/mo_stereo_camera_driver_ros_v1.4.3/lib/mo_stereo_camera_driver/lib/: libmoStereoCameraDriver.so.1.4  libmoStereoCameraDriver.so.1.4.3
src/autolabor_robot/driver/depth_camera/mo_stereo_camera_driver_ros_v1.4.3/rviz/: mo.rviz
src/autolabor_robot/driver/depth_camera/mo_stereo_camera_driver_ros_v1.4.3/src/: usb_asic_cam.cpp
src/autolabor_robot/launch/: second_generation_basic_base.launch
src/bringup_launch/: bringup.launch
src/full_coverage_path_planner/: CMakeLists.txt
src/full_coverage_path_planner/launch/: cover_map.launch  path_planner.launch
src/full_coverage_path_planner/maps/: map1.yaml  new_data.yaml  reuslt.pgm  reuslt.yaml
src/full_coverage_path_planner/scripts/: map_merge.py  multi_robot_bringup.py
(+20 files in other folders)
